# P9-project-POC-formations-RAG

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: evaluate.yml
api/: main.py
data/: annotated_dataset.json
docs/: architecture_mermaid.md
notebooks/: exploration_openagenda.ipynb
rag/: generation.py  retrieval.py
scripts/: build_index.py  evaluate_rag.py  evaluate_rag_llm.py
tests/: test_api.py  test_build_index.py  test_dataset.py  test_mistral.py  test_retrieval.py
