[project]
name = "p9-rag"
version = "0.1.0"
description = "Assistant intelligent de recommandation de formations basé sur un système RAG"
authors = [
    {name = "Amela Hadziavdic", email = "amela188@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
