[project]
name = "p9-rag"
version = "0.1.0"
description = "Assistant intelligent de recommandation de formations basé sur un système RAG"
authors = [
    {name = "Amela Hadziavdic", email = "amela188@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

fastapi = "^0.115"
uvicorn = "^0.35"

sentence-transformers = "^2.7.0"
transformers = "^4.41.0"
torch = "^2.3.1"

accelerate = "^0.33.0"
huggingface-hub = "^0.24.0"

faiss-cpu = "^1.8.0"

numpy = "^1.26.4"
pandas = "^2.2.2"

requests = "^2.32.3"
datasets = "^2.19.1"

pytest = "^8.2.2"

scikit-learn = "^1.5.0"

python-dotenv = "^1.0.1"

mistralai = "^2.6.0"

langchain = "0.1.20"
langchain-core = "0.1.52"
langchain-community = "0.0.38"
langchain-openai = "0.1.7"
langchain-mistralai = "0.1.8"

ragas = "0.1.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"